--- a/begriffe.tex
+++ b/begriffe.tex
@@ -401,7 +401,10 @@ Die Kontext Neuronen sind dabei voll verbunden mit dem Hiddenlayer und dieser gi
 In diesem System existieren so viele Kontext Neuronen wie Neuronen im Hiddenlayer, sodass jedes Neuron dort ein Kontext Neuron mit dem neuen Status befüllt.
 
 %\subsection{Jordan Network}
-\paragraph{Jordan Network}
+\paragraph{Jordan Network} wurden 1993 der Öffentlichkeit präsentiert und sind zu den Elman Netzwerken sehr ähnlich. 
+Es werden wieder Kontext Neuronen für das zwischen Speichern verwendet, nur wird dieser Zustand durch den Outputlayer definiert.
+So wird der Ausgang gespeichert und in der nächsten Iteration wieder verwendet.
+Das Kontext Neuron ist dabei nur mit dem Outputlayer wieder verbunden und nicht mit einem Hiddenlayer.
 
 \section{Domänen und Typen Matrix}
 
