--- a/begriffe.tex
+++ b/begriffe.tex
@@ -408,4 +408,17 @@ Das Kontext Neuron ist dabei nur mit dem Outputlayer wieder verbunden und nicht 
 
 \section{Domänen und Typen Matrix}
 
+\begin{figure}
+	\includegraphics[scale=0.68]{images/typen_domains.png}
+	\caption{Domänen zu Typen Matrix \cite1{AI3}}
+	\label{fig:DomainMatrix}
+\end{figure}
+
+Wie in der Matrix aus Artificial Intelligence for Humans, Volume 3, erkennbar ist, ist kein Netzwerk für alle Problemdomänen geeignet.
+Dies führt zu der Schlussfolgerung, dass je nach Aufgabe und Ziel ein entsprechendes Grundgerüst gewählt werden muss. 
+Auf Basis dieses Grundgerüsts kann uneingeschränkt weitere Eigenheiten aus anderen Netzwerken eingebaut werden.
+In der Praxis findet man dazu aber selten ein Netzwerk von einem Typ.
+Meistens sind es einige mehrere Netzwerke unterschiedlicher Typen die hintereinander und parallel geschallten sind und so ein ganzen System darstellen.
+Dabei übernimmt jedes Teilnetzwerk eine kleine Aufgabe des gesamten und zwar eine für die es Entwickelt wurde.
+
 \section{Tensorflow Typen Unterstützung}
